--- a/stores/pom.xml
+++ b/stores/pom.xml
@@ -95,6 +95,12 @@
             <artifactId>commons-collections4</artifactId>
             <version>4.0</version>
         </dependency>
+        <!--        passay -->
+        <dependency>
+            <groupId>org.passay</groupId>
+            <artifactId>passay</artifactId>
+            <version>1.5.0</version>
+        </dependency>
 
     </dependencies>
 
