--- a/stores/src/main/resources/application.properties
+++ b/stores/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Image storage
 image.storage.root.path=upload
+#Json
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
