--- a/stores/src/main/resources/application.properties
+++ b/stores/src/main/resources/application.properties
@@ -3,14 +3,20 @@ server.port=8181
 spring.datasource.url=jdbc:postgresql://localhost:5432/stores
 spring.datasource.username=postgres
 spring.datasource.password=1
-spring.datasource.driver-class-name=org.postgresql.Driver
 #JPA
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 # Image storage
 image.storage.root.path=upload
-#Json
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
+### Banner
+spring.banner.location=classpath:banner.txt
+spring.main.banner-mode=console
+### Thymeleaf
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.suffix=.html
