--- a/stores/src/main/resources/application.properties
+++ b/stores/src/main/resources/application.properties
@@ -20,3 +20,15 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.suffix=.html
+#Mail Config
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=doan.laptop.stores@gmail.com
+spring.mail.password=doanstores123
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
